--- a/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.scss
+++ b/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.scss
@@ -1,3 +1,28 @@
 nav a {
     cursor: pointer;
 }
+
+.fa.is-pending {
+    animation: rotating 1s linear infinite;
+}
+
+@keyframes rotating {
+    from {
+        -ms-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    to {
+        -ms-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+.minw-30 {
+    min-width: 30px;
+}
