Add volume filter in arbitrage monitor

--- a/src/app/layout/arbitrage-monitor/two-leg-arbitrage-monitor-profit-statistic-tile/two-leg-arbitrage-profit-statistic-tile.component.html
+++ b/src/app/layout/arbitrage-monitor/two-leg-arbitrage-monitor-profit-statistic-tile/two-leg-arbitrage-profit-statistic-tile.component.html
@@ -24,6 +24,9 @@
                     <li>
                         Max profit: {{twoLegArbitrageProfitStatistic.maxProfitPercent}}%
                     </li>
+                    <li>
+                        Min 24h volume: ${{twoLegArbitrageProfitStatistic.minUsd24hVolume}}
+                    </li>
                 </ul>
             </div>
             <div class="row">
