--- a/src/app/layout/arbitrage-monitor/two-leg-arbitrage-monitor-profit-tile/two-leg-arbitrage-profit-tile.component.html
+++ b/src/app/layout/arbitrage-monitor/two-leg-arbitrage-monitor-profit-tile/two-leg-arbitrage-profit-tile.component.html
@@ -20,10 +20,12 @@
                 <div class="col-6">
                     {{twoLegArbitrageProfitOpportunity.sellPrice}}
                     <div>Sell at {{twoLegArbitrageProfitOpportunity.sellAtExchange}}</div>
+                    <div>24h volume ${{twoLegArbitrageProfitOpportunity.usd24hVolumeAtSellExchange}}</div>
                 </div>
                 <div class="col-6">
                     {{twoLegArbitrageProfitOpportunity.buyPrice}}
                     <div>Buy at {{twoLegArbitrageProfitOpportunity.buyAtExchange}}</div>
+                    <div>24h volume ${{twoLegArbitrageProfitOpportunity.usd24hVolumeAtBuyExchange}}</div>
                 </div>
             </div>
         </div>
