--- a/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
+++ b/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
@@ -15,7 +15,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-1">
         <div class="col-12">
             <button *ngFor="let exchangeName of exchangeNamesSupportedForReadingPrices"
                     (click)="toggleExchangeFilter(exchangeName)"
@@ -23,6 +23,19 @@
                 <i class="fa" [class.fa-toggle-on]="isShowingExchange(exchangeName)"
                    [class.fa-toggle-off]="!isShowingExchange(exchangeName)"></i>
             </button>
+        </div>
+        <div class="col-3">
+            <div class="input-group">
+                <button (click)="toggleMinUsd24hVolumeFilter()"
+                        class="btn btn-sm mr-1 mb-1" type="button">
+                    Min volume $
+                    <i class="fa" [class.fa-toggle-on]="isFilteringByMin24hVolume()"
+                       [class.fa-toggle-off]="!isFilteringByMin24hVolume()"></i>
+                </button>
+                <input [(ngModel)]="commonFilter.min24hUsdVolume"
+                       (input)="saveCommonFilter()"
+                       type="text" class="form-control minw-30">
+            </div>
         </div>
     </div>
 
