Add sanitization of links to exchange markets in arbitrage view

--- a/src/app/layout/arbitrage-monitor/two-leg-arbitrage-monitor-profit-statistic-tile/two-leg-arbitrage-profit-statistic-tile.component.html
+++ b/src/app/layout/arbitrage-monitor/two-leg-arbitrage-monitor-profit-statistic-tile/two-leg-arbitrage-profit-statistic-tile.component.html
@@ -27,6 +27,17 @@
                     <li>
                         Min 24h volume: ${{twoLegArbitrageProfitStatistic.minUsd24hVolume}}
                     </li>
+                    <li *ngIf="firstExchangeLink != null">
+                        <a [href]="firstExchangeLink"
+                           target="_blank">
+                            Open {{twoLegArbitrageProfitStatistic.firstExchange}}
+                        </a>
+                    </li>
+                    <li *ngIf="secondExchangeLink != null">
+                        <a [href]="secondExchangeLink" target="_blank">
+                            Open {{twoLegArbitrageProfitStatistic.secondExchange}}
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="row">
