--- a/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
+++ b/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
@@ -42,8 +42,8 @@
         <div class="row mt-1">
             <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3">
                 <div class="input-group">
-                    <button (click)="toggleLiveOpportunitiesMinFilter()" class="btn btn-sm mr-1 mb-1" type="button">Min
-                        profit %
+                    <button (click)="toggleLiveOpportunitiesMinFilter()" class="btn btn-sm mr-1 mb-1" type="button">
+                        Min profit %
                         <i class="fa" [class.fa-toggle-on]="isFilteringOpportunitiesByMinRelativePercent()"
                            [class.fa-toggle-off]="!isFilteringOpportunitiesByMinRelativePercent()"></i>
                     </button>
@@ -56,8 +56,8 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3">
                 <div class="input-group">
-                    <button (click)="toggleLiveOpportunitiesMaxFilter()" class="btn btn-sm mr-1 mb-1" type="button">Max
-                        profit %
+                    <button (click)="toggleLiveOpportunitiesMaxFilter()" class="btn btn-sm mr-1 mb-1" type="button">
+                        Max profit %
                         <i class="fa" [class.fa-toggle-on]="isFilteringOpportunitiesByMaxRelativePercent()"
                            [class.fa-toggle-off]="!isFilteringOpportunitiesByMaxRelativePercent()"></i>
                     </button>
@@ -65,6 +65,22 @@
                            (input)="saveLiveOpportunitiesFilter()"
                            type="text" class="form-control minw-30"
                            [disabled]="!isFilteringOpportunitiesByMaxRelativePercent()">
+                </div>
+            </div>
+        </div>
+        <div class="row mt-1">
+            <div class="col-xs-12 col-sm-6 col-md-5 col-lg-3">
+                <div class="input-group">
+                    <button (click)="toggleLiveOpportunitiesAutoRefresh()" class="btn btn-sm mr-1 mb-1" type="button">
+                        Auto refresh seconds (min 10)
+                        <i class="fa" [class.fa-toggle-on]="isAutoRefreshingLiveOpportunities()"
+                           [class.fa-toggle-off]="!isAutoRefreshingLiveOpportunities()"></i>
+                    </button>
+                    <input [(ngModel)]="liveOpportunitiesFilter.autoRefreshSeconds"
+                           (input)="onAutoRefreshChange()"
+                           type="text"
+                           class="form-control minw-30"
+                           [disabled]="!isAutoRefreshingLiveOpportunities()">
                 </div>
             </div>
         </div>
