--- a/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
+++ b/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
@@ -24,7 +24,23 @@
             </div>
         </div>
     </div>
-
+    <div class="row mt-1">
+        <div class="col-12">
+            Market depth up to:
+            <div>
+                <nav class="nav nav-pills pb-1">
+                    <li *ngFor="let orderBookUsdAmountThresholdIndex of orderBookUsdAmountThresholdsIndexes"
+                        class="nav-item btn-sm p-1">
+                        <a (click)="setOrderBookUsdAmountThreshold(orderBookUsdAmountThresholdIndex)"
+                           class="nav-link p-1"
+                           [class.active]="isOrderBookAmountThresholdSelected(orderBookUsdAmountThresholdIndex)">
+                            ${{orderBookUsdAmountThresholds[orderBookUsdAmountThresholdIndex]}}
+                        </a>
+                    </li>
+                </nav>
+            </div>
+        </div>
+    </div>
     <nav class="nav nav-pills pb-1 border border-top-0 border-left-0 border-right-0">
         <li class="nav-item">
             <a (click)="showOpportunitiesTab()" class="nav-link" [class.active]="isOpportunitiesTabActive">
@@ -84,23 +100,6 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-1">
-            <div class="col-12">
-                At each exchange I want to trade up to:
-                <div>
-                    <nav class="nav nav-pills pb-1">
-                        <li *ngFor="let orderBookUsdAmountThresholdIndex of orderBookUsdAmountThresholdsIndexes"
-                            class="nav-item btn-sm p-1">
-                            <a (click)="setOrderBookUsdAmountThreshold(orderBookUsdAmountThresholdIndex)"
-                               class="nav-link p-1"
-                               [class.active]="isOrderBookAmountThresholdSelected(orderBookUsdAmountThresholdIndex)">
-                                ${{orderBookUsdAmountThresholds[orderBookUsdAmountThresholdIndex]}}
-                            </a>
-                        </li>
-                    </nav>
-                </div>
-            </div>
-        </div>
         <div class="row">
             <div class="col-12">
                 <button class="btn btn-info btn-sm mr-1 mt-1 mb-1" (click)="fetchLiveOpportunities()"
@@ -126,7 +125,7 @@
                 class="col-xs-12 col-sm-12 col-md-6 col-xl-4">
                 <app-two-leg-arbitrage-profit-tile
                     [twoLegArbitrageProfitOpportunity]="twoLegArbitrageProfitOpportunity"
-                    [orderBookAmountThresholdIndexSelected]="liveOpportunitiesFilter.orderBookAmountThresholdIndexSelected"
+                    [orderBookAmountThresholdIndexSelected]="commonFilter.orderBookAmountThresholdIndexSelected"
                 ></app-two-leg-arbitrage-profit-tile>
             </div>
         </div>
