--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -43,7 +43,7 @@
             </div>
             <div *ngIf="isShowingThankYou">
                 <h1>Thank you</h1>
-                Please check your email, you should get message with first time login password soon.
+                Please check your email, you should get message with first time login password soon. If you can't find the email, check the spam folder
             </div>
         </div>
     </div>
