--- a/src/app/layout/arbitrage-monitor/two-leg-arbitrage-opportunities-table/two-leg-arbitrage-opportunities-table.component.html
+++ b/src/app/layout/arbitrage-monitor/two-leg-arbitrage-opportunities-table/two-leg-arbitrage-opportunities-table.component.html
@@ -1,6 +1,6 @@
 <div class="col-12">
     <div>
-        {{profitOpportunities.length}} opportunities
+        Showing {{profitOpportunities.length}} of {{totalNumberOfUnfilteredOpportunities}} opportunities
     </div>
     <div class="table-responsive">
         <table class="table table-striped table-dark table-hover">
